fix: added license to package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "frontend",
 	"version": "0.0.1",
+    "license": "UNLICENSED",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
