--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "frontend",
 	"version": "0.0.1",
-    "license": "UNLICENSED",
+	"license": "UNLICENSED",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -14,34 +14,34 @@
 	},
 	"devDependencies": {
 		"@fontsource/fira-mono": "^4.5.0",
-		"@iconify/svelte": "^3.0.0",
+		"@iconify/svelte": "^3.1.0",
 		"@neoconfetti/svelte": "^1.0.0",
-		"@playwright/test": "1.25.0",
-		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/kit": "next",
+		"@playwright/test": "1.30.0",
+		"@sveltejs/adapter-auto": "2.0.0",
+		"@sveltejs/kit": "1.7.2",
 		"@types/cookie": "^0.5.1",
-		"@types/node": "^18.11.9",
-		"@typescript-eslint/eslint-plugin": "^5.27.0",
-		"@typescript-eslint/parser": "^5.27.0",
+		"@types/node": "^18.14.0",
+		"@typescript-eslint/eslint-plugin": "^5.52.0",
+		"@typescript-eslint/parser": "^5.52.0",
 		"autoprefixer": "^10.4.13",
-		"eslint": "^8.16.0",
-		"eslint-config-prettier": "^8.3.0",
+		"eslint": "^8.34.0",
+		"eslint-config-prettier": "^8.6.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"postcss": "^8.4.19",
-		"prettier": "^2.6.2",
-		"prettier-plugin-svelte": "^2.7.0",
-		"sass": "^1.56.1",
-		"svelte": "^3.46.0",
-		"svelte-check": "^2.7.1",
-		"svelte-preprocess": "^4.10.7",
-		"tailwindcss": "^3.2.4",
-		"tslib": "^2.3.1",
-		"typescript": "^4.7.4",
-		"vite": "^3.1.0"
+		"postcss": "^8.4.21",
+		"prettier": "^2.8.4",
+		"prettier-plugin-svelte": "^2.9.0",
+		"sass": "^1.58.3",
+		"svelte": "^3.55.1",
+		"svelte-check": "^3.0.3",
+		"svelte-preprocess": "^5.0.1",
+		"tailwindcss": "^3.2.7",
+		"tslib": "^2.5.0",
+		"typescript": "^4.9.5",
+		"vite": "^4.1.2"
 	},
 	"type": "module",
 	"dependencies": {
-		"@sanity/client": "^3.4.1",
-		"@sanity/image-url": "^1.0.1"
+		"@sanity/client": "^5.2.1",
+		"@sanity/image-url": "^1.0.2"
 	}
 }
