--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
     "[svelte]": {
         "editor.defaultFormatter": "svelte.svelte-vscode",
         "editor.codeActionsOnSave": {
-            "source.fixAll.eslint": true
+            "source.fixAll.eslint": "explicit"
         },
         "editor.formatOnSave": true,
 
