--- a/package.json
+++ b/package.json
@@ -9,39 +9,39 @@
 		"test": "playwright test",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"lint": "prettier --plugin-search-dir . --check . && eslint ."
 	},
 	"devDependencies": {
-		"@fontsource/fira-mono": "^4.5.0",
-		"@iconify/svelte": "^3.1.0",
-		"@neoconfetti/svelte": "^1.0.0",
-		"@playwright/test": "1.30.0",
-		"@sveltejs/adapter-auto": "2.0.0",
-		"@sveltejs/kit": "1.7.2",
-		"@types/cookie": "^0.5.1",
-		"@types/node": "^18.14.0",
-		"@typescript-eslint/eslint-plugin": "^5.52.0",
-		"@typescript-eslint/parser": "^5.52.0",
-		"autoprefixer": "^10.4.13",
-		"eslint": "^8.34.0",
-		"eslint-config-prettier": "^8.6.0",
+		"@fontsource/fira-mono": "^5.0.13",
+		"@iconify/svelte": "^4.0.2",
+		"@neoconfetti/svelte": "^2.2.1",
+		"@playwright/test": "1.44.1",
+		"@sveltejs/adapter-auto": "3.2.2",
+		"@sveltejs/kit": "2.5.17",
+		"@sveltejs/vite-plugin-svelte": "^3.1.1",
+		"@types/cookie": "^0.6.0",
+		"@types/node": "^20.14.7",
+		"@typescript-eslint/eslint-plugin": "^7.13.1",
+		"@typescript-eslint/parser": "^7.13.1",
+		"autoprefixer": "^10.4.19",
+		"eslint": "^9.5.0",
+		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"postcss": "^8.4.21",
-		"prettier": "^2.8.4",
-		"prettier-plugin-svelte": "^2.9.0",
-		"sass": "^1.58.3",
-		"svelte": "^3.55.1",
-		"svelte-check": "^3.0.3",
-		"svelte-preprocess": "^5.0.1",
-		"tailwindcss": "^3.2.7",
-		"tslib": "^2.5.0",
+		"postcss": "^8.4.38",
+		"prettier": "^3.3.2",
+		"prettier-plugin-svelte": "^3.2.5",
+		"sass": "^1.77.6",
+		"svelte": "^4.2.18",
+		"svelte-check": "^3.8.1",
+		"svelte-preprocess": "^6.0.1",
+		"tailwindcss": "^3.4.4",
+		"tslib": "^2.6.3",
 		"typescript": "^4.9.5",
-		"vite": "^4.1.2"
+		"vite": "^5.3.1"
 	},
 	"type": "module",
 	"dependencies": {
-		"@sanity/client": "^5.2.1",
+		"@sanity/client": "^6.20.1",
 		"@sanity/image-url": "^1.0.2"
 	}
 }
