--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,21 @@
 node_modules
-.svelte-kit
+
+# Output
+.output
+.vercel
+/.svelte-kit
+/build
+
+# OS
 .DS_Store
-*.code-workspace
+Thumbs.db
+
+# Env
+.env
+.env.*
+!.env.example
+!.env.test
+
+# Vite
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
