--- a/package.json
+++ b/package.json
@@ -37,11 +37,12 @@
 		"tailwindcss": "^3.4.4",
 		"tslib": "^2.6.3",
 		"typescript": "^4.9.5",
-		"vite": "^5.3.1"
+		"vite": "^5.3.1",
+		"vitest": "^1.6.0"
 	},
 	"type": "module",
 	"dependencies": {
-		"@sanity/client": "^6.20.1",
+		"@sanity/client": "5.2.1",
 		"@sanity/image-url": "^1.0.2"
 	}
 }
