--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 	"type": "module",
 	"dependencies": {
 		"@sanity/client": "5.2.1",
-		"@sanity/image-url": "^1.0.2"
+		"@sanity/image-url": "^1.0.2",
+		"@sveltejs/adapter-node": "^5.4.0"
 	}
 }
